# Level-Renderer

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GameLevel.txt  GraphicsObjects.h  LevelExporter.py  LevelParser.cpp  LevelParser.h  LevelSelector.cpp  LevelSelector.h  Level_Renderer_Vulkan.sln  Level_Renderer_Vulkan.vcxproj  Level_Renderer_Vulkan.vcxproj.filters  Project Rubric.xlsx  README.md  README.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  h2bParser.h  main.cpp  renderer.h
Assets/: Raft.h
Assets/Textures/: defaultDiffuse.ktx  defaultNormal.ktx  defaultSpecular.ktx
Levels/: GameLevel.txt  GameLevel_FS_LOGO.txt  TestSetup_00.txt
Model Assets/H2B/: BirchTree_1.h2b  BirchTree_2.h2b  BirchTree_3.h2b  BirchTree_4.h2b  BirchTree_5.h2b  Bush.h2b  Bush_Flowers.h2b  Bush_Large.h2b  Bush_Large_Flowers.h2b  Bush_Small.h2b  Bush_Small_Flowers.h2b  DeadTree_1.h2b  DeadTree_10.h2b  DeadTree_2.h2b  DeadTree_3.h2b  DeadTree_4.h2b  DeadTree_5.h2b  DeadTree_6.h2b  DeadTree_7.h2b  DeadTree_8.h2b  DeadTree_9.h2b  Flower_1.h2b  Flower_1_Clump.h2b  Flower_2.h2b  Flower_2_Clump.h2b  Flower_3_Clump.h2b  Flower_4_Clump.h2b  Flower_5_Clump.h2b  Grass_Large.h2b  Grass_Large_Extruded.h2b  Grass_Small.h2b  MapleTree_1.h2b  MapleTree_2.h2b  MapleTree_3.h2b  MapleTree_4.h2b  MapleTree_5.h2b  NormalTree_1.h2b  NormalTree_2.h2b  NormalTree_3.h2b  NormalTree_4.h2b  (+23 more)
Shaders/: PixelShader.hlsl  VertexShader.hlsl
enc_temp_folder/93e28534a778d48e50b4d67861e91eb3/: LevelParser.cpp
ktx/: README.txt
ktx/lib/: TODO.txt
